Update Blog “2021-02-02-artifact-1”

--- a/_data/blog/2021-02-02-artifact-1.md
+++ b/_data/blog/2021-02-02-artifact-1.md
@@ -39,9 +39,13 @@ Introducing the gravity-based water filtration system! Meant for home use, this 
 
 The filter functions via gravity, water enters the top where there is a 50-gallon storage tank and then slowly flows down to the clean water tank where it is now ready for use. Ideally, the bottom tank would be connected to a pipe that leads to the house. The filter does require maintenance; the ceramic filter and membranes must be washed under high pressure. For more water volume per hour, wider filtration units could be designed for larger homes or a situation where water use is more demanding.
 
+![](/assets/Front-Water-Filter.png)
+
 # A Real-World Application
 
 Clean water is essential for survival. The bad news is, we are running out of drinking water on a global scale. To be innovative we need to come up with bold solutions to solve the water crisis. The idea here is called micro-collection. The entire premise of this idea is to deploy a network of filters to reduce the burden of water usage around the world. Now, it's important to note that this solution is not perfect as it still requires a source, rain. The system is entirely weather-dependent. Which could prove a challenge in dry communities.
+
+![](/assets/Water-Filter-Display.png)
 
 # Wrapping Up
 
